🦄 refactor(makefile): move kitex_gen manul

--- a/cmd/core/register/Makefile
+++ b/cmd/core/register/Makefile
@@ -1,4 +1,8 @@
 server:
-	kitex -I ../../../idl/ -module "github.com/evpeople/douyin" -type protobuf  -service register ../../../idl/register.proto 
+	kitex -I ../../../idl/ -module "github.com/evpeople/douyin" -type protobuf -service register ../../../idl/register.proto 
+	# cp -r  -f kitex_gen ../../../
+	# rm -rf `ls | grep -v "Makefile"`
+	# kitex -I ../../../idl/ -module "github.com/evpeople/douyin" -type protobuf -use github.com/evpeople/douyin/kitex_gen -service register ../../../idl/register.proto 
 # server:
 # 	kitex -service demonote ../../idl/register.thrift -module
+	# "github.com/evpeople/douyin/kitex_gen/rigister"
