--- a/cmd/core/user/Makefile
+++ b/cmd/core/user/Makefile
@@ -1,5 +1,5 @@
 server:
-	kitex -I ../../../idl/ -module "github.com/evpeople/douyin" -type protobuf -service register ../../../idl/register.proto 
+	kitex -I ../../../idl/ -module "github.com/evpeople/douyin" -type protobuf -service user ../../../idl/user.proto 
 	# cp -r  -f kitex_gen ../../../
 	# rm -rf `ls | grep -v "Makefile"`
 	# kitex -I ../../../idl/ -module "github.com/evpeople/douyin" -type protobuf -use github.com/evpeople/douyin/kitex_gen -service register ../../../idl/register.proto 
