--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-cmd/core/user/output
+cmd/core/*/output
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
